[gd_scene load_steps=15 format=3 uid="uid://clxrufp2gfhb2"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_amwu5"]
[ext_resource type="Texture2D" uid="uid://bbt3klw77ykst" path="res://Sprites/UI/uiBarreO2-O2.png" id="2_7knyx"]
[ext_resource type="Texture2D" uid="uid://1gvfsffdm7ht" path="res://Sprites/UI/uiBarreO2-Barre.png" id="2_byo8b"]
[ext_resource type="FontFile" uid="uid://b3620iqlduhpn" path="res://font/line_pixel-7.ttf" id="3_20xto"]
[ext_resource type="Texture2D" uid="uid://bhdvp8s876buo" path="res://Sprites/UI/uiBarreO2-BarreFill.png" id="3_d55ks"]
[ext_resource type="Texture2D" uid="uid://cpbrr7tyeb5fd" path="res://Sprites/UI/uiBarreO2-under.png" id="3_egikh"]
[ext_resource type="Texture2D" uid="uid://c616hx8emdpue" path="res://Sprites/bandeau1.png" id="4_1uju1"]
[ext_resource type="Texture2D" uid="uid://dd0padpi7vubp" path="res://Sprites/UI/UI-tresorDansSac.png" id="5_bg4n8"]

[sub_resource type="LabelSettings" id="LabelSettings_xvpdv"]
font = ExtResource("3_20xto")
font_size = 33
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61ct5"]
bg_color = Color(0, 0, 0, 0.388235)

[sub_resource type="Animation" id="Animation_scuje"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BtnRestart:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../BtnQuit:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0o4jf"]
resource_name = "displayGameOver"
length = 2.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../BtnRestart:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BtnQuit:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../..:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../../..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../BtnRestart:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../BtnQuit:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lngvl"]
_data = {
"RESET": SubResource("Animation_scuje"),
"displayGameOver": SubResource("Animation_0o4jf")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al5wh"]
bg_color = Color(0, 0, 0, 0.298039)

[node name="HUD" type="Control" groups=["hud"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amwu5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 69.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_7knyx")
expand_mode = 3

[node name="PbOxygen" type="TextureProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
step = 0.0
value = 25.0
texture_under = ExtResource("3_egikh")
texture_over = ExtResource("2_byo8b")
texture_progress = ExtResource("3_d55ks")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("5_bg4n8")
expand_mode = 3

[node name="numberOfCoins" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20xto")
theme_override_font_sizes/font_size = 33
text = "0"
label_settings = SubResource("LabelSettings_xvpdv")

[node name="GameOver" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0
theme_override_styles/panel = SubResource("StyleBoxFlat_61ct5")

[node name="Panel" type="HBoxContainer" parent="GameOver"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GameOver/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VboxBtn" type="VBoxContainer" parent="GameOver/Panel/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="LbGameOver" type="Label" parent="GameOver/Panel/MarginContainer/VboxBtn"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource("3_20xto")
theme_override_font_sizes/font_size = 40
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnRestart" type="Button" parent="GameOver/Panel/MarginContainer/VboxBtn"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("3_20xto")
theme_override_font_sizes/font_size = 30
theme_override_icons/icon = ExtResource("4_1uju1")
disabled = true
text = "RESTART"
flat = true
icon_alignment = 1

[node name="BtnQuit" type="Button" parent="GameOver/Panel/MarginContainer/VboxBtn"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("3_20xto")
theme_override_font_sizes/font_size = 30
theme_override_icons/icon = ExtResource("4_1uju1")
disabled = true
text = "QUIT"
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
root_node = NodePath("../Panel/MarginContainer/VboxBtn/LbGameOver")
libraries = {
"": SubResource("AnimationLibrary_lngvl")
}

[node name="store" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0
theme_override_styles/panel = SubResource("StyleBoxFlat_al5wh")

[node name="MarginContainer" type="MarginContainer" parent="store"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="store/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="store/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_20xto")
theme_override_font_sizes/font_size = 30
text = "STORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="store/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="store/MarginContainer/VBoxContainer/ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[connection signal="pressed" from="GameOver/Panel/MarginContainer/VboxBtn/BtnRestart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="GameOver/Panel/MarginContainer/VboxBtn/BtnQuit" to="." method="_on_btn_quit_pressed"]
